--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -14,7 +14,7 @@
         android:layout_width="62dp"
         android:layout_height="67dp"
         android:layout_marginStart="8dp"
-        android:layout_marginBottom="24dp"
+        android:layout_marginBottom="36dp"
         android:contentDescription="@string/nav_header_desc"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         app:layout_constraintBottom_toTopOf="@+id/login_bt_navh"
@@ -27,15 +27,12 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:text="@string/nav_header_title"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textColor="@android:color/background_light"
-        app:layout_constraintBottom_toTopOf="@+id/user_email_navh"
         app:layout_constraintStart_toEndOf="@+id/user_image_navh"
-        app:layout_constraintTop_toTopOf="@+id/user_image_navh"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toTopOf="@+id/user_image_navh" />
 
     <TextView
         android:id="@+id/user_email_navh"
@@ -45,14 +42,13 @@
         android:text="@string/nav_header_subtitle"
         android:textColor="@android:color/background_light"
         app:layout_constraintStart_toEndOf="@+id/user_image_navh"
-        tools:layout_editor_absoluteY="74dp" />
+        app:layout_constraintTop_toBottomOf="@+id/user_name_navh" />
 
     <Button
         android:id="@+id/login_bt_navh"
         android:layout_width="101dp"
         android:layout_height="38dp"
         android:layout_marginStart="8dp"
-        android:layout_marginBottom="8dp"
         android:background="@android:color/transparent"
         android:onClick="LoginBtnNavClc"
         android:text="Login"
